Bug 569301 - Add on* event handler property support for media events.  r=smaug